# learn.python

./: .gitattributes  .gitignore  00_COMPUTER_LITERACY_PRIMER.md  01_ROADMAP.md  02_GLOSSARY.md  03_SETUP_ALL_PLATFORMS.md  03_SETUP_LINUX.md  03_SETUP_MACOS.md  03_SETUP_WINDOWS.md  03_SETUP_WINDOWS11.md  04_FOUNDATIONS.md  05_AUTOMATION_FILES_EXCEL.md  06_SQL.md  07_MONITORING_API_INTEGRATION.md  07_SOLARWINDS_ORION.md  08_DASHBOARDS.md  09_QUALITY_TOOLING.md  10_CAPSTONE_PROJECTS.md  11_CHECKLISTS.md  12_SCREENSHOT_CHECKPOINTS.md  13_ENTERPRISE_SAMPLE_SCHEMAS.md  13_SAMPLE_DATABASE_SCHEMAS.md  14_NAVIGATION_AND_STUDY_WORKFLOW.md  15_NEXT_LEVEL_EXPANSION_PLAN.md  16_LEARNER_PROFILE_AND_PLACEMENT.md  17_ASSESSMENT_AND_RUBRICS.md  18_REMEDIATION_PLAYBOOK.md  19_MENTOR_GUIDE.md  20_CURRICULUM_CHANGELOG.md  21_FULL_STACK_MASTERY_PATH.md  22_SPECIALIZATION_TRACKS.md  23_RESOURCE_AND_CURRICULUM_MAP.md  24_MASTERY_SCORING_AND_GATES.md  25_INFINITY_MASTERY_LOOP.md  26_ZERO_TO_MASTER_PLAYBOOK.md  27_DAY_0_TO_DAY_30_BOOTSTRAP.md  28_LEVEL_0_TO_2_DEEP_GUIDE.md  29_LEVEL_3_TO_5_DEEP_GUIDE.md  30_DAY_PYTHON_CHALLENGE.md  30_LEVEL_6_TO_8_DEEP_GUIDE.md  (+65 more)
.github/: pull_request_template.md
Course Slides/: 00-Python Object and Data Structure Basics.pptx  000-Course-Overview-and Installs.pptx  02-Python Statements.pptx  04-Milestone Project 1.pptx  05-Object Oriented Programming.pptx  07-Milestone Project 2.pptx  08-Modules and Packages.pptx  11-Python Generators.pptx  13- Advanced Python Modules.pptx  Emails with Python.pptx  Working with Images.pptx
_audits/: _audit_content_quality.md  _audit_infrastructure.md  _audit_v2_community_strategy.md  _audit_v2_competitive_analysis.md  _audit_v2_content_gaps.md  _audit_v2_pedagogy_research.md  _audit_v2_project_quality.md
_metadata/: lrmi.json
_templates/: CONCEPT_DIAGRAMS_TEMPLATE.md  CONCEPT_VIDEOS_TEMPLATE.md  SOLUTION_TEMPLATE.md  WALKTHROUGH_TEMPLATE.md
badges/: README.md
browser/: exercise.html  index.html  level-0.html  level-1.html  level-2.html  level-3.html  level-4.html  level-5.html
concepts/: README.md  api-basics.md  args-kwargs-explained.md  async-explained.md  classes-and-objects.md  collections-deep-dive-part1.md  collections-deep-dive-part2.md  collections-deep-dive.md  collections-explained.md  comprehensions-explained.md  context-managers-explained.md  dataclasses-explained.md  debugging-methodology-part1.md  debugging-methodology-part2.md  debugging-methodology.md  decorators-explained.md  enums-explained.md  errors-and-debugging.md  files-and-paths.md  functions-explained.md  functools-and-itertools-part1.md  functools-and-itertools-part2.md  functools-and-itertools.md  generators-and-iterators-part1.md  generators-and-iterators-part2.md  generators-and-iterators.md  git-basics-part1.md  git-basics-part2.md  git-basics.md  how-imports-work.md  how-loops-work.md  http-explained.md  jupyter-notebooks.md  match-case-explained.md  modern-python-tooling-part1.md  modern-python-tooling-part2.md  modern-python-tooling.md  reading-documentation.md  reading-error-messages.md  regex-explained.md  (+9 more)
curriculum/: 16_LEARNER_PROFILE_AND_PLACEMENT.md  17_ASSESSMENT_AND_RUBRICS.md  18_REMEDIATION_PLAYBOOK.md  19_MENTOR_GUIDE.md  20_CURRICULUM_CHANGELOG.md  21_FULL_STACK_MASTERY_PATH.md  22_SPECIALIZATION_TRACKS.md  23_RESOURCE_AND_CURRICULUM_MAP.md  24_MASTERY_SCORING_AND_GATES.md  25_INFINITY_MASTERY_LOOP.md  26_ZERO_TO_MASTER_PLAYBOOK.md  27_DAY_0_TO_DAY_30_BOOTSTRAP.md  28_LEVEL_0_TO_2_DEEP_GUIDE.md  29_LEVEL_3_TO_5_DEEP_GUIDE.md  30_LEVEL_6_TO_8_DEEP_GUIDE.md  31_LEVEL_9_TO_10_AND_BEYOND.md  32_DAILY_SESSION_SCRIPT.md  33_WEEKLY_REVIEW_TEMPLATE.md  34_FAILURE_RECOVERY_ATLAS.md  35_CAPSTONE_BLUEPRINTS.md  36_ELITE_ENGINEERING_TRACK.md  37_QUARTERLY_EXAMS_AND_DEFENSES.md  38_SYSTEM_DESIGN_AND_RFCS.md  39_PRODUCTION_PLATFORM_LAB.md  40_SECURITY_COMPLIANCE_HARDENING.md  41_PERFORMANCE_ENGINEERING_LAB.md  42_OPEN_SOURCE_CONTRIBUTION_LANE.md  43_PUBLIC_PROOF_OF_WORK_PORTFOLIO.md  44_SME_INTERVIEW_AND_DEBATE_BANK.md  45_MASTERY_TELEMETRY_AND_REMEDIATION.md  46_ACCESSIBILITY_AND_LEARNING_PROFILE_PLAYBOOK.md  47_DIAGNOSTIC_AND_PERSONALIZED_STUDY_ENGINE.md  48_MISCONCEPTION_AND_FAILURE_ATLAS_EXPANDED.md  49_COMPETENCY_COVERAGE_AND_GAP_CLOSURE_MATRIX.md  50_CERTIFICATION_GRADE_COMPLETION_PROTOCOL.md
data/: xp_config.json
guides/: DIAGRAM_INDEX.md  LEARNING_STYLE_SELECTOR.md  VIDEO_INDEX.md  WALKTHROUGH_INDEX.md
learning/: personalized_plan.md
practice/: README.md
projects/: README.md  bridge-0-to-1.md  bridge-00-to-0.md  bridge-1-to-2.md  bridge-2-to-3.md  bridge-3-to-4.md  bridge-4-to-5.md  bridge-5-to-6.md  bridge-6-to-7.md  bridge-7-to-8.md  bridge-8-to-9.md  run_elite_smoke_checks.sh  run_smoke_checks.sh
tools/: README.md  add_crossrefs.py  ai_review.py  audit_doc_length.py  check_elite_track_contract.py  check_elite_track_contract.sh  check_level_index_contract.py  check_level_index_contract.sh  check_markdown_links.py  check_markdown_links.sh  check_modality_hubs.py  check_portable_paths.py  check_portable_paths.sh  check_project_contract.py  (+21 more)
(+2472 files in other folders)
